--- a/2lab/2lab.vcxproj.filters
+++ b/2lab/2lab.vcxproj.filters
@@ -20,11 +20,11 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Matrix.h">
-      <Filter>Исходные файлы</Filter>
-    </ClInclude>
+    <Text Include="input.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Text Include="in.txt" />
+    <ClInclude Include="Header.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
